--- a/packages/share_plus/share_plus/example/pubspec.yaml
+++ b/packages/share_plus/share_plus/example/pubspec.yaml
@@ -4,11 +4,9 @@ description: Demonstrates how to use the share_plus plugin.
 dependencies:
   flutter:
     sdk: flutter
-#  share_plus: ^7.1.0
+  share_plus: ^7.1.0
   image_picker: ^1.0.0
   file_selector: ^1.0.0
-  share_plus:
-    path: ../
 
 dev_dependencies:
   flutter_driver:
